--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Umbra/vendor/spdlog"]
 	path = Umbra/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Umbra/vendor/GLFW"]
+	path = Umbra/vendor/GLFW
+	url = https://github.com/TheCherno/GLFW
